// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`schema version 1 command contracts locks populated deterministic search and context output: populated search v1 1`] = `
{
  "command": "search",
  "data": {
    "candidates": [
      {
        "conversationAlias": "payments",
        "conversationId": "channel-payments",
        "conversationKind": "channel",
        "fusionContributions": [
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.01639344262295082,
            "source": "broad_fts",
            "sourceQuery": "payment evidence",
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.01639344262295082,
            "source": "exact_phrase",
            "sourceQuery": "payment evidence",
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.01639344262295082,
            "source": "strict_fts",
            "sourceQuery": "payment evidence",
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.01639344262295082,
            "source": "term_fts",
            "sourceQuery": "evidence",
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.01639344262295082,
            "source": "term_fts",
            "sourceQuery": "payment",
          },
        ],
        "fusionScore": 0.0819672131147541,
        "latestActivityAt": 20,
        "link": "https://chat.example.test/_redirect/pl/aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "matches": [
          {
            "bm25": -0.000001,
            "excerpt": "synthetic payment evidence",
            "lexicalEvidence": [
              {
                "bm25": -0.000001,
                "rank": 2,
                "source": "exact_phrase",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000002,
                "rank": 2,
                "source": "strict_fts",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000002,
                "rank": 2,
                "source": "broad_fts",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 2,
                "source": "term_fts",
                "sourceQuery": "evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 2,
                "source": "term_fts",
                "sourceQuery": "payment",
              },
            ],
            "lexicalSource": "exact_phrase",
            "postId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
            "probe": "payment evidence",
            "sourceQuery": "payment evidence",
            "sourceRank": 2,
          },
          {
            "bm25": -0.000001,
            "excerpt": "payment evidence confirmed",
            "lexicalEvidence": [
              {
                "bm25": -0.000001,
                "rank": 1,
                "source": "exact_phrase",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000002,
                "rank": 1,
                "source": "strict_fts",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000002,
                "rank": 1,
                "source": "broad_fts",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 1,
                "source": "term_fts",
                "sourceQuery": "evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 1,
                "source": "term_fts",
                "sourceQuery": "payment",
              },
            ],
            "lexicalSource": "exact_phrase",
            "postId": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
            "probe": "payment evidence",
            "sourceQuery": "payment evidence",
            "sourceRank": 1,
          },
        ],
        "matchingPostIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaa",
          "bbbbbbbbbbbbbbbbbbbbbbbbbb",
        ],
        "priority": 100,
        "rankingEvidence": {
          "exactFullyMatchedProbeCount": 1,
          "exactPhraseInReplyCount": 1,
          "exactPhraseInRootCount": 1,
          "expandedMatchedTermCount": 0,
          "expansionMatchCount": 0,
          "fullyMatchedProbeCount": 1,
          "latestRelevantMatchAt": 20,
          "matchedProbeCount": 1,
          "matchedTermCount": 2,
          "matchingPostCount": 2,
          "subjectInReplies": true,
          "subjectInRoot": true,
          "totalProbeCount": 1,
          "totalTermCount": 2,
        },
        "reasons": [
          "subject_in_root",
          "exact_phrase",
          "exact_phrase_in_root",
          "exact_phrase_in_reply",
          "all_terms_in_thread",
          "rank_fusion",
          "routing_explicit_channel",
          "conversation_priority",
          "latest_activity",
        ],
        "rootPostId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "scoreVector": [
          0,
          0,
          0,
          0,
          1,
          1,
          2,
          1,
          0,
          6,
          0.0819672131147541,
          2,
          1,
          100,
          20,
          20,
        ],
        "threadId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
    ],
    "complete": true,
    "filters": {},
    "freshness": [
      {
        "ageSeconds": 0,
        "alias": "payments",
        "conversationId": "channel-payments",
        "coverageComplete": true,
        "kind": "channel",
        "lastSuccessAt": 1000,
        "observedAt": 1000,
        "stale": false,
      },
    ],
    "freshnessMode": "local",
    "probes": [
      {
        "phrases": [],
        "terms": [
          "payment",
          "evidence",
        ],
        "value": "payment evidence",
      },
    ],
    "routing": {
      "canWiden": false,
      "conversations": [
        {
          "alias": "payments",
          "description": "Payments",
          "evidence": [
            {
              "type": "explicit_channel",
              "value": "payments",
            },
          ],
          "id": "channel-payments",
          "kind": "channel",
          "name": "payments",
          "priority": 100,
        },
      ],
      "explicitChannelPolicy": "restrict",
      "reason": "explicit_channels",
      "unmatchedHints": {
        "repositories": [],
        "scopes": [],
      },
    },
    "searchCoverageComplete": true,
    "searchedConversations": [
      {
        "alias": "payments",
        "evidence": [
          {
            "type": "explicit_channel",
            "value": "payments",
          },
        ],
        "id": "channel-payments",
        "kind": "channel",
      },
    ],
    "subject": {
      "kind": "text",
      "raw": "payment evidence",
      "text": "payment evidence",
    },
    "warnings": [],
    "widened": false,
  },
  "schemaVersion": 1,
  "success": true,
  "warnings": [],
}
`;

exports[`schema version 1 command contracts locks populated deterministic search and context output: populated context v1 1`] = `
{
  "command": "context",
  "data": {
    "budget": {
      "limit": 1000,
      "maxThreads": 3,
      "measurement": "unicode_code_points_in_rendered_post",
      "used": 197,
    },
    "complete": true,
    "detailLevel": "compact",
    "explicitChannelPolicy": "restrict",
    "filters": {},
    "freshness": [
      {
        "ageSeconds": 0,
        "alias": "payments",
        "conversationId": "channel-payments",
        "coverageComplete": true,
        "kind": "channel",
        "lastSuccessAt": 1000,
        "observedAt": 1000,
        "stale": false,
      },
    ],
    "freshnessMode": "local",
    "probes": [
      {
        "phrases": [],
        "terms": [
          "payment",
          "evidence",
        ],
        "value": "payment evidence",
      },
    ],
    "remoteSearch": {
      "candidateThreads": 0,
      "failures": 0,
      "performed": false,
      "queries": [],
      "reason": null,
      "requested": false,
    },
    "searchCoverageComplete": true,
    "searchedConversations": [
      {
        "alias": "payments",
        "evidence": [
          {
            "type": "explicit_channel",
            "value": "payments",
          },
        ],
        "id": "channel-payments",
        "kind": "channel",
      },
    ],
    "selectedThreadsComplete": true,
    "subject": {
      "kind": "text",
      "raw": "payment evidence",
      "text": "payment evidence",
    },
    "threads": [
      {
        "budget": {
          "limit": 500,
          "measurement": "unicode_code_points_in_rendered_post",
          "used": 197,
        },
        "conversationAlias": "payments",
        "conversationId": "channel-payments",
        "conversationKind": "channel",
        "latestActivityAt": 20,
        "link": "https://chat.example.test/_redirect/pl/aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "matchingPostIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaa",
          "bbbbbbbbbbbbbbbbbbbbbbbbbb",
        ],
        "omittedAttachments": [],
        "omittedPosts": 0,
        "posts": [
          {
            "attachments": [],
            "authorDisplayName": "Alice Example",
            "authorUsername": "alice",
            "createAt": 10,
            "deleteAt": 0,
            "id": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
            "message": "synthetic payment evidence",
            "renderedUnits": 68,
            "rootId": "",
            "updateAt": 1,
            "userId": "user-1",
          },
          {
            "attachments": [
              {
                "deleteAt": 0,
                "extension": "txt",
                "id": "file-1",
                "mimeType": "text/plain",
                "name": "synthetic.txt",
                "postId": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
                "size": 42,
              },
            ],
            "authorDisplayName": "Alice Example",
            "authorUsername": "alice",
            "createAt": 20,
            "deleteAt": 0,
            "id": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
            "message": "payment evidence confirmed",
            "renderedUnits": 129,
            "rootId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
            "updateAt": 1,
            "userId": "user-1",
          },
        ],
        "reasons": [
          "subject_in_root",
          "exact_phrase",
          "exact_phrase_in_root",
          "exact_phrase_in_reply",
          "all_terms_in_thread",
          "rank_fusion",
          "routing_explicit_channel",
          "conversation_priority",
          "latest_activity",
        ],
        "returnedAttachments": 1,
        "returnedPosts": 2,
        "selectionStrategy": [
          "root",
          "matching_posts",
        ],
        "threadId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "totalOmittedAttachments": 0,
        "totalPosts": 2,
        "unreportedOmittedAttachments": 0,
      },
    ],
    "unmatchedHints": {
      "repositories": [],
      "scopes": [],
    },
    "warnings": [],
    "widening": {
      "allowed": false,
      "performed": false,
    },
  },
  "schemaVersion": 1,
  "success": true,
  "warnings": [],
}
`;
